--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-slate
 title: Tổng hợp kiến thức 📚
 description: Trang tổng hợp kiến thức
 show_downloads: false
