--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-hacker
 title: Tổng hợp kiến thức 📚
-description: Trang tổng hợp kiến thức
-show_downloads: false
+description: Cre by: Phan Gia Khang
