--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-hacker
-title: Tổng hợp kiến thức 📚
-description: Cre by: Phan Gia Khang
+title: "Tổng hợp kiến thức 📚"
+description: "Cre by: Phan Gia Khang"
+
